# radbio-lm

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  setup.cfg
configs/: 1.3b_train_cfg.yml  1.3b_train_cfg_enron.yml  1.3b_train_cfg_test.yml  gptneox_1.3b_hf.json  gptneox_1b_hf.json  gptneox_20b_hf.json
radbio/: config.py  dataset.py  model.py  utils.py
requirements/: requirements.txt
test/: test_imports.py
