[metadata]
name = radbio
version = attr: radbio.__version__
description = Language modeling for radbio.
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/KPHippe/radbio-lm
author = Kyle Hippe, Michael Irvin, Peng Ding, Alexander Brace, Arvind Ramanathan, Tom Brettin, Rick Stevens
author_email = ramanathana@anl.gov

[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
exclude =
    tests
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-transformers.*]
# https://github.com/huggingface/transformers/issues/13390#issuecomment-934830946
ignore_missing_imports = True
follow_imports = skip
